--- a/doc/htmldata/doxygen.css
+++ b/doc/htmldata/doxygen.css
@@ -1,13 +1,180 @@
-h1 {
- text-align: center;
+body
+{
+ background-color: #99cccc;
+ background-image: url(background.png);
+ display: block;
  font-family: verdana,helvetica,sans-serif;
- background: #99cccc;
- border-width: thin;
- border-style: solid none none none;
- border-color: #000000;
- padding-bottom: 6pt;
- margin-top: 18pt;
+ font-size: 10pt;
+ margin-left: auto;
+ margin-right: auto;
+ max-width: 70em;
 }
+
+img
+{
+ background-color: white;
+ border-style: none;
+}
+
+td.button
+{
+ font-weight: bold;
+}
+
+ul.render
+{
+ list-style: none;
+ font-size: smaller;
+}
+
+ul.piclist
+{
+ list-style: none;
+}
+
+span.header
+{
+ font-weight: bold;
+}
+
+table.layout
+{
+ border-collapse: collapse;
+ border-style: none;
+ border-width: 0px;
+ margin: 0px;
+ padding: 0px;
+ width: 100%;
+}
+
+td.header
+{
+ background-color: white;
+ background-repeat: no-repeat;
+ padding: 6pt;
+ vertical-align: top;
+}
+
+td.sidebar
+{
+ background-color: #99cccc;
+ border-color: #669999;
+ border-style: none;
+ border-width: 0px;
+ padding: 3pt;
+ vertical-align: top;
+ width: 18em;
+ font-size: 8pt;
+}
+
+td.sidebar a:hover
+{
+ color: red;
+}
+
+td.content
+{
+ background-color: white;
+ vertical-align: top;
+ padding: 6pt;
+}
+
+td.footer
+{
+ background-color: white;
+}
+
+table.small
+{
+ font-size: smaller;
+}
+
+ul.toc
+{
+ padding-left: 1em;
+}
+
+td.content img
+{
+ padding: 4pt;
+}
+
+td.content div.section div.subsection
+{
+ padding: 8pt;
+ margin: 8pt;
+}
+
+td.content div.definition
+{
+ border-color: #99cccc;
+ border-width: 1px;
+ border-style: solid;
+ padding: 8pt;
+ margin: 8pt;
+}
+
+td.content div.equation
+{
+ font-family: serif;
+ font-size: larger;
+ padding: 8pt;
+ margin: 8pt;
+ margin-left: 24pt;
+}
+
+td.content div.algorithm
+{
+ font-family: monospace;
+ font-size: larger;
+ padding: 8pt;
+ margin: 8pt;
+ margin-left: 24pt;
+}
+
+td.content span.code
+{
+ font-family: monospace;
+}
+
+td.content span.control
+{
+ font-weight: bold;
+ color: black;
+}
+
+td.content pre.code,
+div.fragment
+{
+ background-color: #ddeeee;
+ border-color: #996666;
+ border-style: dashed;
+ border-width: 1px;
+ font-family: monospace;
+ padding: 8pt;
+ margin: 8pt;
+ margin-left: 24pt;
+}
+
+td.content pre.code span.changecode
+{
+ color: blue;
+ font-weight: bold;
+}
+
+td.content pre.output
+{
+ background-color: #ddeeee;
+ border-style: none;
+ font-family: monospace;
+ padding: 8pt;
+ margin: 8pt;
+ margin-left: 24pt;
+}
+
+
+
+
 
 caption {
  font-weight: bold
@@ -39,19 +206,8 @@ a.codeRef {
  color: #4444ee
 }
 
-a:hover {
- text-decoration: none;
- background-color: #ddeeee
-}
-
 dl.el {
  margin-left: -1cm
-}
-
-div.fragment {
- width: 100%;
- border: none;
- background-color: #ddeeee;
 }
 
 div.ah {
@@ -72,16 +228,6 @@ div.groupHeader {
 div.groupText {
  margin-left: 16px;
  font-style: italic;
-}
-
-body {
- font-family: verdana,helvetica,sans-serif;
- color: #000000;
- background: #ffffff;
-}
-
-td {
- font-family: verdana,helvetica,sans-serif;
 }
 
 td.indexkey {
